{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 104,
  "lineage": "cbe1127f-cc17-3f27-c442-60a6ec12f27a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "my_azurerm_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/loadBalancers/my_azurerm_lb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/publicIPAddresses/myPublicIP"
              }
            ],
            "id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/loadBalancers/my_azurerm_lb",
            "location": "eastus",
            "name": "my_azurerm_lb",
            "resource_group_name": "vm_ubuntu",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.my_terraform_public_ip",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "my_lb_backend_address_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/loadBalancers/my_azurerm_lb/backendAddressPools/my_lb_backend_address_pool",
            "loadbalancer_id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/loadBalancers/my_azurerm_lb",
            "name": "my_lb_backend_address_pool",
            "resource_group_name": "vm_ubuntu"
          },
          "dependencies": [
            "azurerm_lb.my_azurerm_lb",
            "azurerm_public_ip.my_terraform_public_ip",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "my_network_interface_backend_address_pool_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "my_security_group_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/networkSecurityGroups/my_nsg",
            "location": "eastus",
            "name": "my_nsg",
            "resource_group_name": "vm_ubuntu",
            "security_rule": [],
            "tags": {
              "environment": "development",
              "project": "udacity_devops"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "DenyAllInbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "This rule with low priority deny all the inbound traffic.",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/networkSecurityGroups/my_nsg/securityRules/DenyAllInbound",
            "name": "DenyAllInbound",
            "network_security_group_name": "my_nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "vm_ubuntu",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.my_nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "my_terraform_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "myPublicIP",
            "resource_group_name": "vm_ubuntu",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my_terraform_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/virtualNetworks/myVnet/subnets/mySubnet",
            "name": "mySubnet",
            "resource_group_name": "vm_ubuntu",
            "virtual_network_name": "myVnet"
          },
          "dependencies": [
            "azurerm_virtual_network.my_terraform_network",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my_terraform_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/22"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b83c28a6-ea01-406c-a2cd-2eccc815447d",
            "id": "/subscriptions/591795d6-454d-4619-955c-7b7685492d71/resourceGroups/vm_ubuntu/providers/Microsoft.Network/virtualNetworks/myVnet",
            "location": "eastus",
            "name": "myVnet",
            "resource_group_name": "vm_ubuntu",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}